<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PartDescFindStoreActivity" >

    <ImageView
        android:id="@+id/part_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/part_desc"
        android:src="@drawable/tires" />
    
    <TextView
        android:id="@+id/part_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part_pic"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:editable="true"
        android:text="@string/part_name" />
    
    <TextView
        android:id="@+id/part_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part_name"
        android:paddingBottom="15dp"
        android:editable="true"
        android:text="@string/part_desc" />
    
     <TextView
        android:id="@+id/part_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part_desc"
        android:paddingBottom="15dp"
        android:editable="true"
        android:text="@string/price" />
    
    <Button 
        android:id="@+id/order_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="onOrderClick"
        android:text="@string/order"/>

</RelativeLayout>