<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PartDescFindStoreActivity" >

    <ImageView
        android:id="@+id/part_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/part_desc"
        android:src="@drawable/tires" />

    <TextView
        android:id="@+id/part_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part_pic"
        android:editable="true"
        android:paddingBottom="10dp"
        android:text="@string/part_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/part_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part_name"
        android:editable="true"
        android:paddingBottom="15dp"
        android:text="@string/part_desc" />

    <Button
        android:id="@+id/find_store_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onFindStoreClick"
        android:text="@string/find_store" />

</RelativeLayout>